sona:费用的sona报告有不通过的地方 Critical violations = 14.   应该等于0
Change-Id: I272a9b2143bf6cdab8c531130ffd072c6f9bc7f3